--- a/RealOrFake.ipynb
+++ b/RealOrFake.ipynb
@@ -54,7 +54,7 @@
         "from keras.layers import Dense,Embedding,LSTM,Dropout\n",
         "from keras.callbacks import ReduceLROnPlateau"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
         "true = pd.read_csv(\"drive/MyDrive/Temporary/data/True.csv\")\n",
         "fake = pd.read_csv(\"drive/MyDrive/Temporary/data/Fake.csv\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
       "source": [
         "true.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,7 +193,7 @@
       "source": [
         "fake.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -292,7 +292,7 @@
         "fake['category'] = 0\n",
         "df = pd.concat([true,fake])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -308,7 +308,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -433,7 +433,7 @@
         "# Number of data instances\n",
         "len(df)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -465,7 +465,7 @@
         "sns.set_style(\"darkgrid\")\n",
         "sns.countplot(x=df.category)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -507,7 +507,7 @@
         "# No NaN values present\n",
         "df.isna().sum()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -546,7 +546,7 @@
         "chart = sns.countplot(x = \"subject\", hue = \"category\" , data = df)\n",
         "chart.set_xticklabels(chart.get_xticklabels(),rotation=90)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -600,7 +600,7 @@
         "del df['date']\n",
         "df.head()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +705,7 @@
         "df['text'] = df['text'].apply(lambda s:s.lower() if type(s) == str else s) # Convert to lowercase\n",
         "df['text'] = df['text'].apply(denoise_text)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -733,7 +733,7 @@
         "punctuation = list(string.punctuation)\n",
         "stop.update(punctuation) "
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -761,7 +761,7 @@
         "\n",
         "df['text'] = df['text'].apply(remove_stopwords)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -777,7 +777,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -877,7 +877,7 @@
       "source": [
         "x_train, x_test, y_train, y_test = train_test_split(df.text, df.category, test_size=0.2, random_state=42)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -897,7 +897,7 @@
       "source": [
         "bow_vectorizer = CountVectorizer(ngram_range=(1,1))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -909,7 +909,7 @@
         "bow_train = bow_vectorizer.fit_transform(x_train)\n",
         "bow_test = bow_vectorizer.transform(x_test)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -925,7 +925,7 @@
         "# 10 vocabulary items\n",
         "list(bow_vectorizer.vocabulary_.items())[:10]"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -967,7 +967,7 @@
       "source": [
         "tfidf_vectorizer = TfidfVectorizer(stop_words='english', max_df=0.7)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -979,7 +979,7 @@
         "tfidf_train = tfidf_vectorizer.fit_transform(x_train) \n",
         "tfidf_test = tfidf_vectorizer.transform(x_test)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -995,7 +995,7 @@
         "# 10 vocabulary items\n",
         "list(tfidf_vectorizer.vocabulary_.items())[:10]"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1038,7 +1038,7 @@
         "max_features = 10000\n",
         "maxlen = 300"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1055,7 +1055,7 @@
         "# padding sequences here to max_len specified above i.e. 300\n",
         "X_train = sequence.pad_sequences(tokenized_train, maxlen=maxlen)\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1071,7 +1071,7 @@
         "print(len(tokenized_train))\n",
         "print(len(x_train))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1097,7 +1097,7 @@
         "print(x_train[0:5])\n",
         "print(tokenized_train[0:5])"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1125,7 +1125,7 @@
         "# doing padding over the test data\n",
         "X_test = sequence.pad_sequences(tokenized_test, maxlen=maxlen)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1136,7 +1136,7 @@
       "source": [
         "word_index=tokenizer.word_index"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1151,7 +1151,7 @@
       "source": [
         "word_index['story']"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1175,7 +1175,7 @@
       "source": [
         "EMBEDDING_FILE = 'drive/MyDrive/Temporary/data/glove.6B.100d.txt'"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1194,7 +1194,7 @@
         "    embedding_dict[word] = vectors\n",
         "f.close()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1212,7 +1212,7 @@
         "    if(emb_vec is not None):\n",
         "      embedding_matrix[i] = emb_vec"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1227,7 +1227,7 @@
       "source": [
         "num_words"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1256,7 +1256,7 @@
         "#checking the entries are same at both the places or not\n",
         "(embedding_matrix[196] == embedding_dict[\"story\"]).all()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1284,7 +1284,7 @@
       "source": [
         "embedding_matrix.shape"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1459,8 +1459,8 @@
       },
       "source": [
         "clfBOW = SVC(kernel='linear') \n",
-        "clfBOW.fit(tfidf_train,y_train) \n",
-        "score = clfBOW.score(tfidf_test, y_test)\n",
+        "clfBOW.fit(bow_train,y_train) \n",
+        "score = clfBOW.score(bow_test, y_test)\n",
         "print(f'Accuracy: {round(score*100,2)}%')"
       ],
       "execution_count": null,
@@ -1468,7 +1468,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Accuracy: 99.31%\n"
+            "Accuracy: 99.61%\n"
           ],
           "name": "stdout"
         }
@@ -1658,7 +1658,7 @@
         "score = clfTFIDF.score(tfidf_test, y_test)\n",
         "print(f'Accuracy: {round(score*100,2)}%')"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1682,7 +1682,7 @@
         "pred_clf_tfidf = clfTFIDF.predict(tfidf_test)\n",
         "confusion_matrix(y_test,pred_clf_tfidf)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1718,7 +1718,7 @@
         "epochs = 10\n",
         "embed_size = 100"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1729,7 +1729,7 @@
       "source": [
         "learning_rate_reduction = ReduceLROnPlateau(monitor='val_accuracy', patience = 2, verbose=1,factor=0.5, min_lr = 0.00001)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1764,7 +1764,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1804,7 +1804,7 @@
       "source": [
         "history = model.fit(X_train, y_train, batch_size = batch_size , validation_data = (X_test,y_test) , epochs = epochs , callbacks = [learning_rate_reduction])"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1849,7 +1849,7 @@
         "print(\"Accuracy of the model on Training Data is - \" , model.evaluate(X_train,y_train)[1]*100 , \"%\")\n",
         "print(\"Accuracy of the model on Testing Data is - \" , model.evaluate(X_test,y_test)[1]*100 , \"%\")"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1898,7 +1898,7 @@
         "ax[1].set_ylabel(\"Loss\")\n",
         "plt.show()"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1928,7 +1928,7 @@
         "pred = (model.predict(X_test) > 0.5).astype(\"int32\")\n",
         "confusion_matrix(y_test, pred)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1950,8 +1950,7 @@
       "metadata": {
         "id": "L0UerPquxAu6",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 632
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "c4d692a5-ec5e-4e45-9df0-d40fb850f829"
       },
@@ -1963,7 +1962,7 @@
         "plt.xlabel(\"Predicted\")\n",
         "plt.ylabel(\"Actual\")"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
