--- a/RealOrFake.ipynb
+++ b/RealOrFake.ipynb
@@ -1484,7 +1484,7 @@
         "outputId": "fa1b6a2a-7421-41c6-f9ca-af9f01f55659"
       },
       "source": [
-        "pred_clf_bow = clfBOW.predict(tfidf_test)\n",
+        "pred_clf_bow = clfBOW.predict(bow_test)\n",
         "confusion_matrix(y_test,pred_clf_bow)"
       ],
       "execution_count": null,
